--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -4,5 +4,8 @@
   "username": "root",
   "password": "123456",
   "database": "my_api",
-  "entities": ["./src/model/*.ts"]
+  "entities": ["./src/domain/models/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
