--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
