--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "target": "es5", 
+    "lib": ["es6", "dom"],
+    "types": ["reflect-metadata"],
     "module": "commonjs",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "baseUrl": "./src",                             
     "paths": {
