--- a/backend/package.json
+++ b/backend/package.json
@@ -35,10 +35,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.6.0",
     "typeorm": "^0.2.40",
     "uuid": "^8.3.2"
   }
